namespace ciberforo.enums;

public enum ReactionType
{
    LIKE,
    DISLIKE
}
