namespace ciberforo.Entities
{
    public enum ReportStatus
    {
        PENDING,
        REVIEWED,
        RESPONDED,
        CLOSED
    }
}
