namespace ciberforo.Entities
{
    public enum ReportType
    {
        THEME,
        COMMENT
    }
}
