namespace ciberforo.Entities
{
    public enum UserRole
    {
        USER,
        MODERATOR
    }
}
